# markpact

./: .bumpversion.toml  .gitignore  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  project.functions.toon  project.sh  pyproject.toml  pyqual.yaml
.github/workflows/: ci.yml
demos/: demo_live_markpact.py
docs/: README.md  contract.md  runtime-v2-improvements.md
examples/: DEMOS.md  README.md  demo_live_markpact.py
examples/docker-publish/: README.md
examples/fastapi-todo/: README.md
examples/static-frontend/: README.md
examples/sync-workflow/: README.md
examples/sync-workflow/src/: app.py  config.yaml
project/: README.md  analysis.toon  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.toon.yaml  evolution.toon  evolution.toon.yaml  flow.mmd  flow.toon  index.html  map.toon  map.toon.yaml  mermaid.export  project.toon  project.toon.yaml  project.yaml  prompt.txt
scripts/: sync_version.py
src/markpact/: __init__.py  auto_fix.py  cli.py  converter.py  docker_runner.py  generator.py  notebook_converter.py  packer.py  parser.py  publisher.py  runner.py  sandbox.py  syncer.py  template.py
src/markpact/cli/: __init__.py  config_cmd.py  convert_cmd.py  helpers.py  pack_cmd.py  portal_cmd.py  publish_cmd.py  run_cmd.py  sync_cmd.py
src/markpact/portal/: __init__.py  client.py
src/markpact/publish/: __init__.py  docker_pub.py  github.py  helpers.py  llm_config.py  main.py  models.py  npm.py  pypi.py  version.py
src/markpact/runtime/: __init__.py  cli.py  core.py  core_v2.py  core_v3.py  exceptions.py  executors.py  models.py  parser.py  plugins.py  ssh_manager.py  state.py  steps.py
tests/: test_auto_fix.py  test_cli.py  test_cli_subcommands.py  test_converter.py  test_generator.py  test_include.py  test_parser.py  test_publish.py  test_syncer.py  test_template.py
