[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markpact"
version = "0.1.28"
description = "Executable Markdown Runtime – run and manage entire projects directly from a single README.md file using specialized markpact code blocks and isolated Docker sandboxes."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["markdown", "executable", "readme", "runtime", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = [
    "litellm>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "build",
    "twine",
    "bump2version>=1.0",
    "litellm>=1.0",
]

[project.scripts]
markpact = "markpact.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/markpact"
Repository = "https://github.com/wronai/markpact"
Issues = "https://github.com/wronai/markpact/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markpact"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
